Fixed search bar in search results and added margin on top

--- a/styleffs.css
+++ b/styleffs.css
@@ -222,3 +222,7 @@ header {
           .suggestions-dropdown li:hover {
             background-color: #f5f5f5;
           }
+
+          .center-container {
+            margin-top: 10px;
+          }
